--- a/src/App.css
+++ b/src/App.css
@@ -147,3 +147,33 @@ progress[value]::-webkit-progress-value {
   color: rgb(154, 154, 154);
   padding-bottom: 1.2em;
 }
+
+/* PledgeComponent */
+.pledge {
+  border: 1px solid rgb(215, 215, 215);
+  border-radius: 10px;
+  margin: 1em 0;
+  padding: 1.3em 1.5em;
+}
+.pledge h3 {
+  font-size: 1rem;
+  padding-bottom: .5em;
+}
+.pledge h4 {
+  color: rgb(60 ,180, 171);
+  font-size: .85rem;
+  padding-bottom: 1em;
+}
+.pledge h1 span {
+  font-size: 1rem;
+  color: rgb(154, 154, 154);;
+}
+.pledge button {
+  border: none;
+  border-radius: 30px;
+  padding: 1em 1.5em;
+  background-color: rgb(60 ,180, 171);
+  color: #fff;
+  font-weight: 700;
+}
+
