--- a/src/App.css
+++ b/src/App.css
@@ -177,3 +177,34 @@ progress[value]::-webkit-progress-value {
   font-weight: 700;
 }
 
+.out {
+  border: 1px solid rgb(215, 215, 215);
+  border-radius: 10px;
+  margin: 1em 0;
+  padding: 1.3em 1.5em;
+}
+.out h3 {
+  font-size: 1rem;
+  padding-bottom: .5em;
+  color: rgb(128, 128, 128);
+}
+.out h4 {
+  color: rgb(195, 217, 214);
+  font-size: .85rem;
+  padding-bottom: 1em;
+}
+.out p {
+  color: rgb(234, 234, 234);
+}
+.out h1 {
+  font-size: 1rem;
+  color: rgb(154, 154, 154);
+}
+.out button {
+  border: none;
+  border-radius: 30px;
+  padding: 1em 1.5em;
+  background-color: rgb(203, 203, 203);
+  color: #fff;
+  font-weight: 700;
+}
