--- a/src/App.css
+++ b/src/App.css
@@ -26,22 +26,23 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding-top: 1px solid red.9em;
+  padding-top: .9em;
 }
 
 .menu {
   background: #fff;
-  border-radius: 10px;
-  width: 80%;
-  margin: 1em auto;
+  border-radius: 5px;
+  width: 82%;
+  margin: 2.3em auto;
   text-align: left;
-  padding: 1px solid red.2em;
+  padding: 1em;
   position: relative;
   z-index: 2;
   box-shadow: 1px 1px 10px #999;
 }
 .menu li {
-  padding: 1px solid red.4em 0;
+  padding: 1.4em 0;
+  font-weight: 700;
 }
 .menu li:nth-child(2) {
   border: none;
@@ -65,18 +66,17 @@
 }
 .main-div {
   background: #fff;
-  padding: 2.8em 1px solid red.6em;
+  padding: 2.8em 1.6em;
   border-radius: 5px;
   box-shadow: 1px 1px 10px #999;
-  z-index: 1px solid red;
 }
 
 .show-main-div {
   background: transparent;
-  padding: 2.8em 1px solid red.6em;
+  padding: 2.8em 1.6em;
   border-radius: 5px;
   box-shadow: 1px 1px 10px #999;
-  z-index: 1px solid red;
+  
 }
 
 
@@ -87,8 +87,8 @@
 }
 .main-innner-div h1 {
   font-weight: 700;
-  font-size: 1px solid red.4rem;
-  padding-bottom: 1px solid red.2em;
+  font-size: 1.5rem;
+  padding-bottom: 1em;
 }
 .main-innner-div p {
   font-weight: 400;
@@ -177,7 +177,7 @@ progress[value]::-webkit-progress-value {
   font-size: .8rem;
   line-height: 25px;
   color: rgb(154, 154, 154);
-  padding-bottom: 1px solid red.2em;
+  padding-bottom: 2em;
 }
 
 /* PledgeComponent */
@@ -185,7 +185,7 @@ progress[value]::-webkit-progress-value {
   border: 1px solid rgb(215, 215, 215);
   border-radius: 10px;
   margin: 1em 0;
-  padding: 1px solid red.3em 1px solid red.5em;
+  padding: 2em 1.3em;
 }
 .pledge h3 {
   font-size: 1rem;
@@ -206,7 +206,7 @@ progress[value]::-webkit-progress-value {
 .pledge button {
   border: none;
   border-radius: 30px;
-  padding: 1em 1px solid red.5em;
+  padding: 1em 2em;
   background-color: rgb(60 ,180, 171);
   color: #fff;
   font-weight: 700;
@@ -216,7 +216,7 @@ progress[value]::-webkit-progress-value {
   border: 1px solid rgb(215, 215, 215);
   border-radius: 10px;
   margin: 1em 0;
-  padding: 1px solid red.3em 1px solid red.5em;
+  padding: 2em 1.3em;
 }
 .out h3 {
   font-size: 1rem;
@@ -242,7 +242,7 @@ progress[value]::-webkit-progress-value {
 .out button {
   border: none;
   border-radius: 30px;
-  padding: 1em 1px solid red.5em;
+  padding: 1em 2.3em;
   background-color: rgb(203, 203, 203);
   color: #fff;
   font-weight: 700;
@@ -253,10 +253,9 @@ progress[value]::-webkit-progress-value {
 .MuiModal-root {
   border-radius: 10px;
   font-family: 'Commissioner', sans-serif;
-  height: auto;
   margin: auto;
   overflow: scroll;
-  width: 80%;
+  width: 90%;
 }
 #modal-modal-title {
   font-weight: 700;
@@ -273,7 +272,7 @@ progress[value]::-webkit-progress-value {
   border: 1px solid rgb(215, 215, 215);
   border-radius: 5px;
   font-family: 'Commissioner', sans-serif;
-  padding: 1em .5em;
+  padding: 1em;
   margin: 1em 0;
 }
 .modal-div > div {
