--- a/src/App.css
+++ b/src/App.css
@@ -534,24 +534,12 @@ progress[value]::-webkit-progress-value {
     font-weight: 700;
   }
   .numbers-row p {
-    font-weight: 400;
-    font-size: 12px;
-    color: rgb(154, 154, 154);
-    padding: 1em 0;
+    font-size: 1rem;
   }
   
   progress {
-    border: none;
-    width: 80%;
-    margin: 1em 0;
-  }
-  progress[value]::-webkit-progress-bar {
-    background-color: #eee;
-    border-radius: 10px;
-  }
-  progress[value]::-webkit-progress-value {
-    background-color: rgb(60 ,180, 171);
-    border-radius: 10px;
+    width: 85%;
+    margin: 1em auto;
   }
   
   /* AboutComponent */
@@ -583,14 +571,19 @@ progress[value]::-webkit-progress-value {
     margin: 1em 0;
     padding: 2em 1.3em;
   }
+  .pledge-row-desktop {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
   .pledge h3 {
     font-size: 1rem;
-    padding-bottom: .5em;
+    padding-bottom: 1em;
   }
   .pledge h4 {
     color: rgb(60 ,180, 171);
     font-size: .85rem;
-    padding-bottom: 1em;
+    padding-bottom: 1.2em;
   }
   .pledge h1 {
     font-size: 2rem;
